--- a/dino_model.ipynb
+++ b/dino_model.ipynb
@@ -203,8 +203,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total training jump images: 267\n",
-      "total training nojump images: 269\n",
+      "total training jump images: 444\n",
+      "total training nojump images: 395\n",
       "total validation jump images: 55\n",
       "total validation nojump images: 81\n",
       "total test jump images: 24\n",
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -299,15 +299,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 658 images belonging to 2 classes.\n",
-      "Found 136 images belonging to 2 classes.\n"
+      "Found 829 images belonging to 2 classes.\n",
+      "Found 146 images belonging to 2 classes.\n"
      ]
     }
    ],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -351,46 +351,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "100/100 [==============================] - 200s 2s/step - loss: 0.1112 - acc: 0.9649 - val_loss: 0.1606 - val_acc: 0.9611\n",
-      "Epoch 2/3\n",
-      "100/100 [==============================] - 205s 2s/step - loss: 0.0943 - acc: 0.9678 - val_loss: 0.1538 - val_acc: 0.9711\n",
-      "Epoch 3/3\n",
-      "100/100 [==============================] - 491s 5s/step - loss: 0.0873 - acc: 0.9715 - val_loss: 0.1799 - val_acc: 0.9754\n"
+      "Epoch 1/5\n",
+      "150/150 [==============================] - 216s 1s/step - loss: 0.0859 - acc: 0.9687 - val_loss: 0.1341 - val_acc: 0.9734\n",
+      "Epoch 2/5\n",
+      "150/150 [==============================] - 267s 2s/step - loss: 0.0737 - acc: 0.9717 - val_loss: 0.1477 - val_acc: 0.9713\n",
+      "Epoch 3/5\n",
+      "150/150 [==============================] - 266s 2s/step - loss: 0.0604 - acc: 0.9796 - val_loss: 0.2013 - val_acc: 0.9731\n",
+      "Epoch 4/5\n",
+      "150/150 [==============================] - 266s 2s/step - loss: 0.0479 - acc: 0.9810 - val_loss: 0.1519 - val_acc: 0.9713\n",
+      "Epoch 5/5\n",
+      "150/150 [==============================] - 272s 2s/step - loss: 0.0424 - acc: 0.9860 - val_loss: 0.1587 - val_acc: 0.9734\n"
      ]
     }
    ],
    "source": [
     "history = model.fit_generator(\n",
     "      train_generator,\n",
-    "      steps_per_epoch=100,\n",
-    "      epochs=3,\n",
+    "      steps_per_epoch=150,\n",
+    "      epochs=5,\n",
     "      validation_data=validation_generator,\n",
     "      validation_steps=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'acc': [0.9648946766389409, 0.9679037049158645, 0.9714142377063288],\n",
-       " 'loss': [0.11124422603894918, 0.09441217847183392, 0.08749492967455978],\n",
-       " 'val_acc': [0.9610655657092079, 0.9710743757318859, 0.9754098316685098],\n",
-       " 'val_loss': [0.16058151964212722, 0.15380196224595996, 0.17989352958841767]}"
+       "{'acc': [0.9683181605517442,\n",
+       "  0.9712449199291947,\n",
+       "  0.9797775495683139,\n",
+       "  0.980717181191554,\n",
+       "  0.9858442841855451],\n",
+       " 'loss': [0.08669909199117173,\n",
+       "  0.07407220898237689,\n",
+       "  0.06012557869787128,\n",
+       "  0.04799846998569165,\n",
+       "  0.04265388627777312],\n",
+       " 'val_acc': [0.973360650607797,\n",
+       "  0.9713114688142401,\n",
+       "  0.9731404906954647,\n",
+       "  0.9713114710127722,\n",
+       "  0.973360650607797],\n",
+       " 'val_loss': [0.13408325952535008,\n",
+       "  0.14774908389148042,\n",
+       "  0.20129988386756587,\n",
+       "  0.15186736612366106,\n",
+       "  0.15870190767636216]}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,20 +421,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "os.chdir(\"C:/Users/bened/OneDrive/Arbeit/Lernen/python_training/\")\n",
-    "model.save('jump_nojump_v2.h5')"
+    "model.save('jump_nojump_v3.h5')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.chdir(\"C:/Users/bened/OneDrive/Arbeit/Lernen/python_training/\")\n",
@@ -423,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -445,14 +467,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test acc: 0.9457013607025146\n"
+      "test acc: 0.9502262473106384\n"
      ]
     }
    ],
@@ -463,8 +485,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "preds = model.predict_generator(test_generator, steps = 1)"
@@ -472,16 +496,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([0., 1.], dtype=float32), array([  1, 103], dtype=int64))"
+       "(array([0., 1.], dtype=float32), array([ 17, 204], dtype=int64))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -506,18 +530,6 @@
        "       [0.],\n",
        "       [0.],\n",
        "       [0.],\n",
-       "       [0.],\n",
-       "       [1.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [0.],\n",
-       "       [1.],\n",
        "       [1.],\n",
        "       [0.],\n",
        "       [1.],\n",
@@ -527,213 +539,28 @@
        "       [1.],\n",
        "       [1.],\n",
        "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
+       "       [0.],\n",
        "       [1.],\n",
        "       [1.],\n",
        "       [0.],\n",
        "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
        "       [0.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
        "       [0.],\n",
-       "       [1.],\n",
-       "       [1.],\n",
-       "       [0.]], dtype=float32)"
+       "       [1.]], dtype=float32)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "preds.round()"
+    "preds_r[1:25]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +579,7 @@
        "       1])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,14 +601,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.04702138900756836\n"
+      "0.04586172103881836\n"
      ]
     }
    ],
@@ -801,9 +628,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Runtime testing"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
