--- a/score_classification.ipynb
+++ b/score_classification.ipynb
@@ -2,23 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import keras\n",
-    "from keras import layers\n",
+    "#from keras import layers\n",
     "from keras import models\n",
     "from keras import optimizers\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import load_model\n",
-    "import os"
+    "from keras.models import Model\n",
+    "from keras.layers import *\n",
+    "import os\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total training images: 0\n",
-      "total validation images: 0\n",
-      "total test images: 0\n"
+      "total training images: 37\n",
+      "total validation images: 14\n",
+      "total test images: 16\n"
      ]
     }
    ],
@@ -53,9 +58,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keras Sequential API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = ks.models.Sequential()\n",
@@ -120,15 +134,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [
@@ -173,6 +178,144 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keras functional API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "train_folder = base_dir + \"train_pics\"\n",
+    "valid_folder = base_dir + \"validation_pics\"\n",
+    "test_folder = base_dir + \"test_pics\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_names = [f for f in os.listdir(train_folder)]\n",
+    "valid_names = [f for f in os.listdir(valid_folder)]\n",
+    "test_names = [f for f in os.listdir(test_folder)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29 training files\n",
+      "14 validation files\n",
+      "16 test files\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(len(train_names)) + \" training files\")\n",
+    "print(str(len(valid_names)) + \" validation files\")\n",
+    "print(str(len(test_names)) + \" test files\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = np.ndarray(shape=(len(train_names), 50, 160, 3), dtype = np.float32)\n",
+    "\n",
+    "i = 0\n",
+    "for f in train_names:\n",
+    "    img = load_img(folder + \"/\" + f)\n",
+    "    x = img_to_array(img)\n",
+    "    #x = x.reshape(())\n",
+    "    x = (x - 128) / 128\n",
+    "    dataset[i] = x\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def create_dataset(fold, names):\n",
+    "    dataset = np.ndarray(shape=(len(train_names), 50, 160, 3), dtype = np.float32)\n",
+    "    i = 0\n",
+    "    for f in names:\n",
+    "        img = load_img(base_dir + fold + \"/\" + f)\n",
+    "        x = img_to_array(img)\n",
+    "        #x = x.reshape(())\n",
+    "        x = (x - 128) / 128\n",
+    "        dataset[i] = x\n",
+    "        i += 1\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = create_dataset(\"train_pics\", train_names)\n",
+    "validation_dataset = create_dataset(\"validation_pics\", valid_names)\n",
+    "test_dataset = create_dataset(\"test_pics\", test_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filters:\n",
+    "f1, f2, f3 = 16,32,64\n",
+    "patch_size = 5\n",
+    "p_size = (2,2)\n",
+    "\n",
+    "#TODO correct shape\n",
+    "inp = Input(shape=(75, 250,1))\n",
+    "\n",
+    "\n",
+    "conv1 = Conv2D(filters = f1, kernel_size = (3,3), activation = \"relu\")(inp)\n",
+    "maxp1 = MaxPool2D(pool_size = p_size)(conv1)\n",
+    "#tbc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
