one-hot encoding for label preprocessing started

--- a/score_classification.ipynb
+++ b/score_classification.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import keras\n",
@@ -37,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total training images: 37\n",
+      "total training images: 29\n",
       "total validation images: 14\n",
       "total test images: 16\n"
      ]
@@ -61,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keras Sequential API"
+    "## Keras Sequential API (old)"
    ]
   },
   {
@@ -190,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
@@ -203,8 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_names = [f for f in os.listdir(train_folder)]\n",
@@ -214,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -222,8 +234,8 @@
      "output_type": "stream",
      "text": [
       "29 training files\n",
-      "14 validation files\n",
-      "16 test files\n"
+      "13 validation files\n",
+      "15 test files\n"
      ]
     }
    ],
@@ -235,32 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = np.ndarray(shape=(len(train_names), 50, 160, 3), dtype = np.float32)\n",
-    "\n",
-    "i = 0\n",
-    "for f in train_names:\n",
-    "    img = load_img(folder + \"/\" + f)\n",
-    "    x = img_to_array(img)\n",
-    "    #x = x.reshape(())\n",
-    "    x = (x - 128) / 128\n",
-    "    dataset[i] = x\n",
-    "    i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def create_dataset(fold, names):\n",
-    "    dataset = np.ndarray(shape=(len(train_names), 50, 160, 3), dtype = np.float32)\n",
+    "    dataset = np.ndarray(shape=(len(names), 50, 160, 3), dtype = np.float32)\n",
     "    i = 0\n",
     "    for f in names:\n",
     "        img = load_img(base_dir + fold + \"/\" + f)\n",
@@ -269,53 +263,257 @@
     "        x = (x - 128) / 128\n",
     "        dataset[i] = x\n",
     "        i += 1\n",
-    "    return dataset"
+    "    return dataset\n",
+    "\n",
+    "def create_labels(names):\n",
+    "    labels = [np.zeros((len(names),10)) for i in range(5)]\n",
+    "    i = 0\n",
+    "    for n in range(len(names)):\n",
+    "        seq = names[n][0:5]\n",
+    "        for digit in range(len(seq)):\n",
+    "            label = int(seq[digit])\n",
+    "            #print(str(digit) + \";\" + str(label) + \";\" + str(n))\n",
+    "            labels[digit][n][label] = 1\n",
+    "        i += 1\n",
+    "    return labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 128,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([29, 10]),\n",
+       " array([29, 10]),\n",
+       " array([29, 10]),\n",
+       " array([29, 10]),\n",
+       " array([29, 10])]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[np.array((len(train_names),10)) for i in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "train_dataset = create_dataset(\"train_pics\", train_names)\n",
     "validation_dataset = create_dataset(\"validation_pics\", valid_names)\n",
-    "test_dataset = create_dataset(\"test_pics\", test_names)"
+    "test_dataset = create_dataset(\"test_pics\", test_names)\n",
+    "\n",
+    "train_labels = create_labels(train_names)\n",
+    "validation_labels = create_labels(valid_names)\n",
+    "test_dataset = create_labels(test_names)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "        [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])]"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels[0:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "chararray([b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0',\n",
+       "           b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0',\n",
+       "           b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0', b'0'],\n",
+       "          dtype='|S1')"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:40: UserWarning: Update your `Model` call to the Keras 2 API: `Model(inputs=Tensor(\"in..., outputs=[<tf.Tenso...)`\n"
+     ]
+    }
+   ],
    "source": [
     "#Filters:\n",
     "f1, f2, f3 = 16,32,64\n",
     "patch_size = 5\n",
+    "k_size = (3,3)\n",
     "p_size = (2,2)\n",
+    "n_class = 10\n",
+    "node = 10\n",
     "\n",
     "#TODO correct shape\n",
-    "inp = Input(shape=(75, 250,1))\n",
+    "inp = Input(shape=(75, 250, 1))\n",
     "\n",
     "\n",
-    "conv1 = Conv2D(filters = f1, kernel_size = (3,3), activation = \"relu\")(inp)\n",
+    "conv1 = Conv2D(filters = f1, kernel_size = k_size, activation = \"relu\")(inp)\n",
     "maxp1 = MaxPool2D(pool_size = p_size)(conv1)\n",
-    "#tbc"
+    "\n",
+    "conv2 = Conv2D(filters = f2, kernel_size = k_size, activation = \"relu\")(maxp1)\n",
+    "maxp2 = MaxPool2D(pool_size = p_size)(conv2)\n",
+    "\n",
+    "conv3 = Conv2D(filters = f3, kernel_size = k_size, activation = \"relu\")(maxp2)\n",
+    "maxp3 = MaxPool2D(pool_size = p_size)(conv3)\n",
+    "\n",
+    "flat = Flatten()(maxp3)\n",
+    "drop = Dropout(0.25)(flat)\n",
+    "\n",
+    "dense_11 = Dense(node, activation = \"relu\")(drop)\n",
+    "dense_12 = Dense(node, activation = \"relu\")(drop)\n",
+    "dense_13 = Dense(node, activation = \"relu\")(drop)\n",
+    "dense_14 = Dense(node, activation = \"relu\")(drop)\n",
+    "dense_15 = Dense(node, activation = \"relu\")(drop)\n",
+    "\n",
+    "dense_21 = Dense(n_class, activation = \"softmax\")(dense_11)\n",
+    "dense_22 = Dense(n_class, activation = \"softmax\")(dense_12)\n",
+    "dense_23 = Dense(n_class, activation = \"softmax\")(dense_13)\n",
+    "dense_24 = Dense(n_class, activation = \"softmax\")(dense_14)\n",
+    "dense_25 = Dense(n_class, activation = \"softmax\")(dense_15)\n",
+    "\n",
+    "output = [dense_21, dense_22, dense_23, dense_24, dense_25]\n",
+    "\n",
+    "\n",
+    "model = Model(input = inp, output = output)\n",
+    "model.compile(loss = \"categorical_crossentropy\", optimizer = \"adadelta\", metrics = [\"accuracy\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_10 (InputLayer)           (None, 75, 250, 1)   0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_28 (Conv2D)              (None, 73, 248, 16)  160         input_10[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_28 (MaxPooling2D) (None, 36, 124, 16)  0           conv2d_28[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_29 (Conv2D)              (None, 34, 122, 32)  4640        max_pooling2d_28[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_29 (MaxPooling2D) (None, 17, 61, 32)   0           conv2d_29[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_30 (Conv2D)              (None, 15, 59, 64)   18496       max_pooling2d_29[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_30 (MaxPooling2D) (None, 7, 29, 64)    0           conv2d_30[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_10 (Flatten)            (None, 12992)        0           max_pooling2d_30[0][0]           \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_6 (Dropout)             (None, 12992)        0           flatten_10[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_31 (Dense)                (None, 10)           129930      dropout_6[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_32 (Dense)                (None, 10)           129930      dropout_6[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_33 (Dense)                (None, 10)           129930      dropout_6[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_34 (Dense)                (None, 10)           129930      dropout_6[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_35 (Dense)                (None, 10)           129930      dropout_6[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_36 (Dense)                (None, 10)           110         dense_31[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_37 (Dense)                (None, 10)           110         dense_32[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_38 (Dense)                (None, 10)           110         dense_33[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_39 (Dense)                (None, 10)           110         dense_34[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_40 (Dense)                (None, 10)           110         dense_35[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 673,496\n",
+      "Trainable params: 673,496\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
