Export model, update gitignore

--- a/score_classification.ipynb
+++ b/score_classification.ipynb
@@ -593,6 +593,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('models/score_v1.h5')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
