--- a/multi_input_classification.ipynb
+++ b/multi_input_classification.ipynb
@@ -47,70 +47,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "model_pics = load_model('C:/Users/bened/OneDrive/Arbeit/Lernen/python_training/models/jump_nojump_v3.h5')"
+    "## Define model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 241, 66, 32)       9632      \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 120, 33, 32)       0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 111, 24, 64)       204864    \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 55, 12, 64)        0         \n",
-      "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 51, 8, 128)        204928    \n",
-      "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 25, 4, 128)        0         \n",
-      "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 12800)             0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               6554112   \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1)                 513       \n",
-      "=================================================================\n",
-      "Total params: 6,974,049\n",
-      "Trainable params: 6,974,049\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_pics.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
+    "f1, f2, f3 = 8,16,32\n",
+    "k_size = (3,3)\n",
+    "\n",
     "pics_input = Input(shape = (250, 75, 3))\n",
-    "pics_features = model_pics(pics_input)\n",
+    "pics_c1 = Conv2D(filters = f1, kernel_size = k_size, activation = \"relu\")(pics_input)\n",
+    "pics_m1 = MaxPooling2D((2,2))(pics_c1)\n",
+    "pics_c2 = Conv2D(filters = f2, kernel_size = k_size, activation = \"relu\")(pics_m1)\n",
+    "pics_m2 = MaxPooling2D((2,2))(pics_c2)\n",
+    "pics_c3 = Conv2D(filters = f3, kernel_size = k_size, activation = \"relu\")(pics_m2)\n",
+    "pics_m3 = MaxPooling2D((2,2))(pics_c3)\n",
+    "pics_f = Flatten()(pics_m3)\n",
+    "pics_d = Dense(512, activation = \"softmax\")(pics_f)\n",
     "\n",
     "nums_input = Input(shape = ([1]))\n",
     "nums_features = Dense(1, activation = \"softmax\")(nums_input)\n",
     "\n",
-    "conc_layer = concatenate([pics_features, nums_features])\n",
+    "conc_layer = concatenate([pics_d, nums_features])\n",
     "dense_1 = Dense(10, activation = \"softmax\")(conc_layer)\n",
     "\n",
     "model = Model(inputs = [pics_input, nums_input], outputs = dense_1)"
@@ -118,30 +83,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Tensor' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-e04a6e8b763d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpics_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'Tensor' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_39 (InputLayer)           (None, 250, 75, 3)   0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_6 (Conv2D)               (None, 248, 73, 8)   224         input_39[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_6 (MaxPooling2D)  (None, 124, 36, 8)   0           conv2d_6[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_7 (Conv2D)               (None, 122, 34, 16)  1168        max_pooling2d_6[0][0]            \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_7 (MaxPooling2D)  (None, 61, 17, 16)   0           conv2d_7[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_8 (Conv2D)               (None, 59, 15, 32)   4640        max_pooling2d_7[0][0]            \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_8 (MaxPooling2D)  (None, 29, 7, 32)    0           conv2d_8[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_2 (Flatten)             (None, 6496)         0           max_pooling2d_8[0][0]            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_40 (InputLayer)           (None, 1)            0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_26 (Dense)                (None, 512)          3326464     flatten_2[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_27 (Dense)                (None, 1)            2           input_40[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_13 (Concatenate)    (None, 513)          0           dense_26[0][0]                   \n",
+      "                                                                 dense_27[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_28 (Dense)                (None, 10)           5140        concatenate_13[0][0]             \n",
+      "==================================================================================================\n",
+      "Total params: 3,337,638\n",
+      "Trainable params: 3,337,638\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
      ]
     }
    ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
