Continued data preparation for dual input model

--- a/score_classification.ipynb
+++ b/score_classification.ipynb
@@ -150,7 +150,6 @@
     "    for f in names:\n",
     "        img = load_img(base_dir + fold + \"/\" + f)\n",
     "        x = img_to_array(img)\n",
-    "        #x = x.reshape(())\n",
     "        x = (x - 128) / 128\n",
     "        dataset[i] = x\n",
     "        i += 1\n",
@@ -166,7 +165,6 @@
     "        seq = names[n][0:5]\n",
     "        for digit in range(len(seq)):\n",
     "            label = int(seq[digit])\n",
-    "            #print(str(digit) + \";\" + str(label) + \";\" + str(n))\n",
     "            labels[digit][n][label] = 1\n",
     "        i += 1\n",
     "    return labels"
@@ -265,27 +263,9 @@
     "maxp1 = MaxPool2D(pool_size = p_size)(conv1)\n",
     "\n",
     "conv2 = Conv2D(filters = f2, kernel_size = k_size, activation = \"relu\")(maxp1)\n",
-    "#maxp2 = MaxPool2D(pool_size = p_size)(conv2)\n",
-    "\n",
-    "#conv3 = Conv2D(filters = f3, kernel_size = k_size, activation = \"relu\")(maxp2)\n",
-    "#maxp3 = MaxPool2D(pool_size = p_size)(conv3)\n",
     "\n",
     "flat = Flatten()(conv2)\n",
-    "#drop = Dropout(0.1)(flat)\n",
     "\n",
-    "#dense_11 = Dense(node, activation = \"relu\")(drop)\n",
-    "#dense_12 = Dense(node, activation = \"relu\")(drop)\n",
-    "#dense_13 = Dense(node, activation = \"relu\")(drop)\n",
-    "#dense_14 = Dense(node, activation = \"relu\")(drop)\n",
-    "#dense_15 = Dense(node, activation = \"relu\")(drop)\n",
-    "\n",
-    "#dense_21 = Dense(n_class, activation = \"softmax\")(dense_11)\n",
-    "#dense_22 = Dense(n_class, activation = \"softmax\")(dense_12)\n",
-    "#dense_23 = Dense(n_class, activation = \"softmax\")(dense_13)\n",
-    "#dense_24 = Dense(n_class, activation = \"softmax\")(dense_14)\n",
-    "#dense_25 = Dense(n_class, activation = \"softmax\")(dense_15)\n",
-    "\n",
-    "#Alternative:\n",
     "dense_21 = Dense(n_class, activation = \"softmax\")(flat)\n",
     "dense_22 = Dense(n_class, activation = \"softmax\")(flat)\n",
     "dense_23 = Dense(n_class, activation = \"softmax\")(flat)\n",
@@ -293,9 +273,6 @@
     "dense_25 = Dense(n_class, activation = \"softmax\")(flat)\n",
     "\n",
     "output = [dense_21, dense_22, dense_23, dense_24, dense_25]\n",
-    "\n",
-    "#output = [dense_11, dense_12, dense_13, dense_14, dense_15]\n",
-    "\n",
     "\n",
     "model = Model(input = inp_corr, output = output)\n",
     "model.compile(loss = \"categorical_crossentropy\", optimizer = \"sgd\", metrics = [\"accuracy\"])"
@@ -405,13 +382,7 @@
       "132/132 [==============================] - 0s 2ms/step - loss: 0.0550 - dense_46_loss: 1.1921e-07 - dense_47_loss: 1.1921e-07 - dense_48_loss: 0.0073 - dense_49_loss: 0.0137 - dense_50_loss: 0.0340 - dense_46_acc: 1.0000 - dense_47_acc: 1.0000 - dense_48_acc: 1.0000 - dense_49_acc: 1.0000 - dense_50_acc: 0.9924\n",
       "Epoch 25/30\n",
       "132/132 [==============================] - 0s 2ms/step - loss: 0.0494 - dense_46_loss: 1.1921e-07 - dense_47_loss: 1.1921e-07 - dense_48_loss: 0.0069 - dense_49_loss: 0.0129 - dense_50_loss: 0.0296 - dense_46_acc: 1.0000 - dense_47_acc: 1.0000 - dense_48_acc: 1.0000 - dense_49_acc: 1.0000 - dense_50_acc: 0.9924\n",
-      "Epoch 26/30\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 26/30\n",
       "132/132 [==============================] - 0s 3ms/step - loss: 0.0578 - dense_46_loss: 1.1921e-07 - dense_47_loss: 1.1921e-07 - dense_48_loss: 0.0065 - dense_49_loss: 0.0123 - dense_50_loss: 0.0391 - dense_46_acc: 1.0000 - dense_47_acc: 1.0000 - dense_48_acc: 1.0000 - dense_49_acc: 1.0000 - dense_50_acc: 0.9924\n",
       "Epoch 27/30\n",
       "132/132 [==============================] - 0s 3ms/step - loss: 0.0497 - dense_46_loss: 1.1921e-07 - dense_47_loss: 1.1921e-07 - dense_48_loss: 0.0063 - dense_49_loss: 0.0118 - dense_50_loss: 0.0316 - dense_46_acc: 1.0000 - dense_47_acc: 1.0000 - dense_48_acc: 1.0000 - dense_49_acc: 1.0000 - dense_50_acc: 0.9924\n",
