Improved model performance

--- a/score_classification.ipynb
+++ b/score_classification.ipynb
@@ -9,19 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import keras\n",
@@ -32,6 +22,7 @@
     "from keras.models import load_model\n",
     "from keras.models import Model\n",
     "from keras.layers import *\n",
+    "from keras.utils.vis_utils import plot_model\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
@@ -237,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,27 +282,27 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_8 (InputLayer)            (None, 50, 160, 1)   0                                            \n",
+      "input_1 (InputLayer)            (None, 50, 160, 1)   0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "conv2d_15 (Conv2D)              (None, 45, 155, 8)   296         input_8[0][0]                    \n",
+      "conv2d_1 (Conv2D)               (None, 45, 155, 8)   296         input_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2D)  (None, 22, 77, 8)    0           conv2d_15[0][0]                  \n",
+      "max_pooling2d_1 (MaxPooling2D)  (None, 22, 77, 8)    0           conv2d_1[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "conv2d_16 (Conv2D)              (None, 17, 72, 16)   4624        max_pooling2d_9[0][0]            \n",
+      "conv2d_2 (Conv2D)               (None, 17, 72, 16)   4624        max_pooling2d_1[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling2d_10 (MaxPooling2D) (None, 8, 36, 16)    0           conv2d_16[0][0]                  \n",
+      "max_pooling2d_2 (MaxPooling2D)  (None, 8, 36, 16)    0           conv2d_2[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_8 (Flatten)             (None, 4608)         0           max_pooling2d_10[0][0]           \n",
+      "flatten_1 (Flatten)             (None, 4608)         0           max_pooling2d_2[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "dense_36 (Dense)                (None, 10)           46090       flatten_8[0][0]                  \n",
+      "dense_1 (Dense)                 (None, 10)           46090       flatten_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_37 (Dense)                (None, 10)           46090       flatten_8[0][0]                  \n",
+      "dense_2 (Dense)                 (None, 10)           46090       flatten_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_38 (Dense)                (None, 10)           46090       flatten_8[0][0]                  \n",
+      "dense_3 (Dense)                 (None, 10)           46090       flatten_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_39 (Dense)                (None, 10)           46090       flatten_8[0][0]                  \n",
+      "dense_4 (Dense)                 (None, 10)           46090       flatten_1[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_40 (Dense)                (None, 10)           46090       flatten_8[0][0]                  \n",
+      "dense_5 (Dense)                 (None, 10)           46090       flatten_1[0][0]                  \n",
       "==================================================================================================\n",
       "Total params: 235,370\n",
       "Trainable params: 235,370\n",
@@ -385,13 +376,7 @@
       "132/132 [==============================] - 1s 5ms/step - loss: 0.4681 - dense_36_loss: 4.0796e-04 - dense_37_loss: 3.6161e-04 - dense_38_loss: 0.0743 - dense_39_loss: 0.2076 - dense_40_loss: 0.1853 - dense_36_acc: 1.0000 - dense_37_acc: 1.0000 - dense_38_acc: 1.0000 - dense_39_acc: 0.9697 - dense_40_acc: 0.9924\n",
       "Epoch 25/35\n",
       "132/132 [==============================] - 1s 5ms/step - loss: 0.2385 - dense_36_loss: 2.4530e-05 - dense_37_loss: 2.3058e-05 - dense_38_loss: 0.0375 - dense_39_loss: 0.0754 - dense_40_loss: 0.1256 - dense_36_acc: 1.0000 - dense_37_acc: 1.0000 - dense_38_acc: 1.0000 - dense_39_acc: 1.0000 - dense_40_acc: 0.9924\n",
-      "Epoch 26/35\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 26/35\n",
       "132/132 [==============================] - 1s 6ms/step - loss: 0.1682 - dense_36_loss: 4.2848e-06 - dense_37_loss: 3.8450e-06 - dense_38_loss: 0.0253 - dense_39_loss: 0.0510 - dense_40_loss: 0.0919 - dense_36_acc: 1.0000 - dense_37_acc: 1.0000 - dense_38_acc: 1.0000 - dense_39_acc: 1.0000 - dense_40_acc: 0.9924\n",
       "Epoch 27/35\n",
       "132/132 [==============================] - 1s 6ms/step - loss: 0.1313 - dense_36_loss: 9.8167e-07 - dense_37_loss: 7.9744e-07 - dense_38_loss: 0.0193 - dense_39_loss: 0.0380 - dense_40_loss: 0.0740 - dense_36_acc: 1.0000 - dense_37_acc: 1.0000 - dense_38_acc: 1.0000 - dense_39_acc: 1.0000 - dense_40_acc: 0.9924\n",
@@ -426,6 +411,15 @@
    ],
    "source": [
     "model.fit(train_dataset, train_labels, epochs = 35, batch_size=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(model, \"model_1.png\", show_shapes=True, show_layer_names=True)"
    ]
   },
   {
