--- a/dino_model.ipynb
+++ b/dino_model.ipynb
@@ -25,6 +25,7 @@
     "from keras.preprocessing import image\n",
     "from keras.models import load_model\n",
     "import keras\n",
+    "from keras.utils.vis_utils import plot_model\n",
     "import numpy as np\n",
     "from PIL import Image\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
@@ -148,8 +149,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = models.Sequential()\n",
@@ -157,10 +160,6 @@
     "model.add(layers.MaxPooling2D((3,3)))\n",
     "model.add(layers.Conv2D(64, (10,10), activation = \"relu\"))\n",
     "model.add(layers.MaxPooling2D((3,3)))\n",
-    "#model.add(layers.Conv2D(128, (10,10), activation=\"relu\"))\n",
-    "#model.add(layers.MaxPooling2D((2,2)))\n",
-    "#model.add(layers.Conv2D(128, (5,5), activation=\"relu\"))\n",
-    "#model.add(layers.MaxPooling2D((3,3)))\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(512, activation=\"relu\"))\n",
     "model.add(layers.Dense(1, activation = \"sigmoid\"))"
@@ -168,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,19 +177,19 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_10 (Conv2D)           (None, 66, 241, 32)       9632      \n",
+      "conv2d_1 (Conv2D)            (None, 66, 241, 32)       9632      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_9 (MaxPooling2 (None, 22, 80, 32)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 22, 80, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_11 (Conv2D)           (None, 13, 71, 64)        204864    \n",
+      "conv2d_2 (Conv2D)            (None, 13, 71, 64)        204864    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_10 (MaxPooling (None, 4, 23, 64)         0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 4, 23, 64)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 5888)              0         \n",
+      "flatten_1 (Flatten)          (None, 5888)              0         \n",
       "_________________________________________________________________\n",
-      "dense_5 (Dense)              (None, 512)               3015168   \n",
+      "dense_1 (Dense)              (None, 512)               3015168   \n",
       "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 1)                 513       \n",
+      "dense_2 (Dense)              (None, 1)                 513       \n",
       "=================================================================\n",
       "Total params: 3,230,177\n",
       "Trainable params: 3,230,177\n",
@@ -201,6 +200,15 @@
    ],
    "source": [
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model(model, \"model_1.png\", show_shapes=True, show_layer_names=True)"
    ]
   },
   {
@@ -387,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_loss, test_acc = model.evaluate_generator(test_generator, steps=50)\n",
