--- a/multi_input_classification.ipynb
+++ b/multi_input_classification.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\h5py\\__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import keras\n",
@@ -44,15 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 199,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "f1, f2, f3 = 16,32,64\n",
+    "f1, f2, f3 = 32,64,128\n",
     "c_size = (10,10)\n",
-    "p_size = (4,4)\n",
+    "k_size = (2,2)\n",
     "\n",
     "pics_input = Input(shape = (75, 250, 3))\n",
     "pics_c1 = Conv2D(filters = f1, kernel_size = c_size, activation = \"relu\")(pics_input)\n",
@@ -61,8 +69,8 @@
     "pics_c2 = Conv2D(filters = f2, kernel_size = c_size, activation = \"relu\")(pics_m1)\n",
     "pics_m2 = MaxPooling2D(k_size)(pics_c2)\n",
     "\n",
-    "#pics_c3 = Conv2D(filters = f3, kernel_size = c_size, activation = \"relu\")(pics_m2)\n",
-    "#pics_m3 = MaxPooling2D((k_size))(pics_c3)\n",
+    "pics_c3 = Conv2D(filters = f3, kernel_size = c_size, activation = \"relu\")(pics_m2)\n",
+    "pics_m3 = MaxPooling2D((k_size))(pics_c3)\n",
     "\n",
     "pics_f = Flatten()(pics_m2)\n",
     "pics_drop = Dropout(0.5)(pics_f)\n",
@@ -72,16 +80,16 @@
     "nums_features = Dense(1, activation = \"relu\")(nums_input)\n",
     "\n",
     "conc_layer = concatenate([pics_d, nums_features])\n",
-    "dense_1 = Dense(30, activation = \"relu\")(conc_layer)\n",
+    "dense_1 = Dense(50, activation = \"relu\")(conc_layer)\n",
     "dense_2 = Dense(1, activation = \"sigmoid\")(dense_1)\n",
     "\n",
     "model = Model(inputs = [pics_input, nums_input], outputs = dense_2)\n",
-    "model.compile(loss = \"binary_crossentropy\", optimizer = \"adam\", metrics = [\"acc\"])"
+    "model.compile(loss = \"binary_crossentropy\", optimizer = \"adam\", metrics = [\"accuracy\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 200,
    "metadata": {
     "scrolled": true
    },
@@ -93,35 +101,35 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_51 (InputLayer)           (None, 75, 250, 3)   0                                            \n",
+      "input_54 (InputLayer)           (None, 75, 250, 3)   0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "conv2d_66 (Conv2D)              (None, 66, 241, 16)  4816        input_51[0][0]                   \n",
+      "conv2d_80 (Conv2D)              (None, 66, 241, 32)  9632        input_54[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling2d_66 (MaxPooling2D) (None, 33, 120, 16)  0           conv2d_66[0][0]                  \n",
+      "max_pooling2d_79 (MaxPooling2D) (None, 33, 120, 32)  0           conv2d_80[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "conv2d_67 (Conv2D)              (None, 24, 111, 32)  51232       max_pooling2d_66[0][0]           \n",
+      "conv2d_81 (Conv2D)              (None, 24, 111, 64)  204864      max_pooling2d_79[0][0]           \n",
       "__________________________________________________________________________________________________\n",
-      "max_pooling2d_67 (MaxPooling2D) (None, 12, 55, 32)   0           conv2d_67[0][0]                  \n",
+      "max_pooling2d_80 (MaxPooling2D) (None, 12, 55, 64)   0           conv2d_81[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_26 (Flatten)            (None, 21120)        0           max_pooling2d_67[0][0]           \n",
+      "flatten_27 (Flatten)            (None, 42240)        0           max_pooling2d_80[0][0]           \n",
       "__________________________________________________________________________________________________\n",
-      "dropout_11 (Dropout)            (None, 21120)        0           flatten_26[0][0]                 \n",
+      "dropout_27 (Dropout)            (None, 42240)        0           flatten_27[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "input_52 (InputLayer)           (None, 1)            0                                            \n",
+      "input_55 (InputLayer)           (None, 1)            0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "dense_101 (Dense)               (None, 20)           422420      dropout_11[0][0]                 \n",
+      "dense_105 (Dense)               (None, 20)           844820      dropout_27[0][0]                 \n",
       "__________________________________________________________________________________________________\n",
-      "dense_102 (Dense)               (None, 1)            2           input_52[0][0]                   \n",
+      "dense_106 (Dense)               (None, 1)            2           input_55[0][0]                   \n",
       "__________________________________________________________________________________________________\n",
-      "concatenate_26 (Concatenate)    (None, 21)           0           dense_101[0][0]                  \n",
-      "                                                                 dense_102[0][0]                  \n",
+      "concatenate_27 (Concatenate)    (None, 21)           0           dense_105[0][0]                  \n",
+      "                                                                 dense_106[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_103 (Dense)               (None, 30)           660         concatenate_26[0][0]             \n",
+      "dense_107 (Dense)               (None, 50)           1100        concatenate_27[0][0]             \n",
       "__________________________________________________________________________________________________\n",
-      "dense_104 (Dense)               (None, 1)            31          dense_103[0][0]                  \n",
+      "dense_108 (Dense)               (None, 1)            51          dense_107[0][0]                  \n",
       "==================================================================================================\n",
-      "Total params: 479,161\n",
-      "Trainable params: 479,161\n",
+      "Total params: 1,060,469\n",
+      "Trainable params: 1,060,469\n",
       "Non-trainable params: 0\n",
       "__________________________________________________________________________________________________\n"
      ]
@@ -140,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -155,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -261,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -731,7 +739,7 @@
        "[1077 rows x 3 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -766,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -785,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +802,7 @@
        "(1077, 75, 250, 3)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +822,7 @@
        "(1077,)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +842,7 @@
        "(1077,)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {
     "scrolled": true
    },
@@ -854,19 +862,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 646 samples, validate on 431 samples\n",
+      "Train on 861 samples, validate on 216 samples\n",
       "Epoch 1/5\n",
-      "600/646 [==========================>...] - ETA: 2s - loss: 1.8680 - acc: 0.8400"
+      "861/861 [==============================] - 53s 62ms/step - loss: 0.7123 - acc: 0.6492 - val_loss: 1.7616 - val_acc: 0.0000e+00\n",
+      "Epoch 2/5\n",
+      "861/861 [==============================] - 51s 59ms/step - loss: 0.5671 - acc: 0.7596 - val_loss: 1.4720 - val_acc: 0.0000e+00\n",
+      "Epoch 3/5\n",
+      "861/861 [==============================] - 51s 60ms/step - loss: 0.5795 - acc: 0.7596 - val_loss: 1.4143 - val_acc: 0.0000e+00\n",
+      "Epoch 4/5\n",
+      "861/861 [==============================] - 53s 62ms/step - loss: 0.5489 - acc: 0.7596 - val_loss: 1.6356 - val_acc: 0.0000e+00\n",
+      "Epoch 5/5\n",
+      "861/861 [==============================] - 51s 59ms/step - loss: 0.5550 - acc: 0.7596 - val_loss: 1.3347 - val_acc: 0.0000e+00\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x22471db9748>"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit([pic_array, score_array], label_array, epochs = 5, shuffle = True, batch_size = 100, validation_split = 0.4)"
+    "model.fit([pic_array, score_array], label_array, epochs = 5, shuffle = True, batch_size = 100, validation_split = 0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
@@ -877,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -888,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 194,
    "metadata": {
     "collapsed": true
    },
@@ -899,8 +925,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "label_array_test = label_array_test > 0.5\n",
@@ -913,18 +941,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True     104\n",
-       "False      4\n",
+       "True     69\n",
+       "False    39\n",
        "Name: correct_prediction, dtype: int64"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,23 +963,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[69,  0],\n",
-       "       [ 4, 35]])"
+       "       [39,  0]])"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "confusion_matrix(label_array_test, results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " True,\n",
+       " False,\n",
+       " True,\n",
+       " True]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
    ]
   },
   {
